force-app/main/default/objects/Animal_Relationship__c/Animal_Relationship__c.object-meta.xml
<CustomObject>
    <description
  >Represents important operational relationships between animals.</description>
    <label>Animal Relationship</label>
    <nameField>
        <label>Relationship Number</label>
        <displayFormat>REL-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>