force-app/main/default/objects/Animal_Relationship__c/fields/From_Animal__c.field-meta.xml
<CustomField>
    <fullName>From_Animal__c</fullName>
    <description>Source animal in the relationship.</description>
    <label>From Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Outbound Relationships</relationshipLabel>
    <relationshipName>Outbound_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>