force-app/main/default/objects/Animal_Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <description>Type of relationship between the animals.</description>
    <label>Relationship Type</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Littermate</fullName>
            </value>
            <value>
                <fullName>Bonded Pair</fullName>
            </value>
            <value>
                <fullName>Offspring</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Aggression Risk</fullName>
            </value>
            <value>
                <fullName>Medical Cohort</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>