force-app/main/default/objects/Animal_Relationship__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date the relationship started.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>