force-app/main/default/objects/Animal_Relationship__c/fields/To_Animal__c.field-meta.xml
<CustomField>
    <fullName>To_Animal__c</fullName>
    <description>Target animal in the relationship.</description>
    <label>To Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Inbound Relationships</relationshipLabel>
    <relationshipName>Inbound_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>