force-app/main/default/objects/Animal_Relationship__c/validationRules/A360_No_Self_Relationship.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description
  >Prevents an animal relationship from referencing the same animal on both sides.</description>
    <errorConditionFormula>From_Animal__c = To_Animal__c</errorConditionFormula>
    <errorMessage>From Animal and To Animal must be different.</errorMessage>
    <fullName>A360_No_Self_Relationship</fullName>
</ValidationRule>